--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+board_build.partitions = min_spiffs.csv
 upload_port = /dev/ttyUSB*
 monitor_port = /dev/ttyUSB*
 monitor_speed = 115200
