--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-board_build.partitions = min_spiffs.csv
+board_build.partitions = min_spiffs.csv ; crashes OTA
 upload_port = /dev/ttyUSB*
 monitor_port = /dev/ttyUSB*
 monitor_speed = 115200
