--- a/platformio.ini
+++ b/platformio.ini
@@ -13,9 +13,9 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 board_build.partitions = min_spiffs.csv
-;upload_port = /dev/ttyUSB*
-upload_protocol = espota
-upload_port = 10.0.0.25
+upload_port = /dev/ttyUSB*
+;upload_protocol = espota
+;upload_port = 10.0.0.25
 monitor_port = /dev/ttyUSB*
 monitor_speed = 115200
 lib_deps = 
